[gd_scene load_steps=2 format=3 uid="uid://dvdbfdfubwa02"]

[ext_resource type="Script" path="res://main.gd" id="1_2drt8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2drt8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "测试-Test"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "AAAAAAAAAA"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "BBBBBBBBBBB"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CCCCCCCCCCCCCCCC"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_button_down"]
